--- a/boselecta/pages/casestudy/content-design/index.html
+++ b/boselecta/pages/casestudy/content-design/index.html
@@ -21,7 +21,7 @@
 <script src="../../../assets/js/core.js"></script>
 
 </head>
-<body class="page-journal">
+<body class="page-casestudy">
     <!-- HEADER  -->
     <header>
         <div class="brand">
