--- a/boselecta/pages/casestudy/research-improvement/index.html
+++ b/boselecta/pages/casestudy/research-improvement/index.html
@@ -21,7 +21,7 @@
 <script src="../../../assets/js/core.js"></script>
 
 </head>
-<body class="page-journal">
+<body class="page-casestudy">
     <!-- HEADER  -->
     <header>
         <div class="brand">
@@ -31,9 +31,9 @@
     </header>
     <section id="intro" class="content">
         <h2>
-            Improving the Claims Experience: <br class="dt-set" />Research-Backed UX and Team Growth
+            Improving the Claims Experience :<br class="dt-set" /> Research backed UX
         </h2>
-        <p>Kickstarting a mobile first approach to product design and making smarter claims journeys.</p>
+        <p>Reducing user pain points with an optimised flows and prioritising a mobile first strategy.</p>
         <a class="button" style="display: none;"></a>
     </section>
     <section id="splash">
@@ -44,9 +44,10 @@
             <div class="col1 col">
                 <h4>Outcome</h4>
                 <p>
-                    Through initial discovery work, I identified that improving decision-making clarity and simplifying user selections would lead to the most meaningful gains.<br />
-                    Follow-up usability testing showed a significant improvement in task completion time. We also uncovered missing functionality which, once addressed, contributed to higher user satisfaction with online claims.<br />
-                    Post-release, we observed measurable reductions in claims-related call and chat volumes, along with an increase in user retention.
+                    The online claims experience is one of four key flows in Asurion Home+. CX research and prior usability testing highlighted five areas for improvement.<br />
+                    Through a UX audit and flow analysis, I identified excessive steps that could be simplified, combined, or systemised—leading to meaningful gains in user experience.<br />
+                    Usability testing confirmed faster task completion and revealed missing functionality, which once addressed, contributed to higher user satisfaction with online claims.<br />
+                    Post-release, claims-related call and chat volume dropped, and user retention increased.
                 </p>
                 <!--blockquote>
                     <p></p>
@@ -83,42 +84,33 @@
         <div class="container section1 flex">
             <div class="col1 col">
                 <h4>Background</h4>
-                <p>Asurion Home+ is a Device Protection and Insurance service with a customer facing marketting site and portal app for managing customer devices and claims. I acted as a lead designer for Sprints 1~3, before welcoming 2 designers onto the team in sprint 4. These initial phases were constrained by a need to deliver a full scale product whilst requirements evolved. The project was partially localised from an existing US led project which prioritized a web first design template.</p>
+                <p>Asurion Home+ is a device protection and insurance service with a customer-facing marketing site and a portal app for managing devices and claims. I led design for Sprints 1–3, delivering core product flows under shifting requirements and tight timelines. In Sprint 4, I onboarded two additional designers.<br />
+                The project was partially localized from a US-led, web-first design, requiring adaptation for regional needs while building a scalable experience.</p>
             </div>
             <div class="col2 col">
-                <h4>Context</h4>
-                <p>By sprint 5 we had successfully released a home device insurance service for multi clients. The UX team were now in a position to contribute proposals to improve the overall UX of the service. My area was focussed on the claims section of the users My Portal experience. We had undertaken 2 qualitative usability tests and a robust user led competitor research assignment which were compiled into specific tasks.</p>
+                <span class="img" style="background-image: url(/assets/img/case-claim-outcome.png);"></span>
             </div>
         </div> 
         <div class="container section1 flex">
             <div class="col1 col">
-                <h5>Requirements</h5>
-                <ul>
-                    <li>Reduce unnecessary items</li>
-                    <li>Improve device issue input</li>
-                    <li>Refine compensation methods</li>
+                <h4>Requirements</h4>
+                <ol>
+                    <li>Improve user entry of device problems on first step.</li>
+                    <li>Refine compensation selection and give relevant information for ease of selection.</li>
                     <li>Provide step by step guidance</li>
-                    <li>Give clear information relevant compensation selection.</li>
                     <li>Add call and contact methods.</li>
-                </ul>
+                    <li>Reduce unnecessary items</li>
+                </ol>
             </div>
             <div class="col2 col">
-                <span class="img" style="background-image: url(/assets/img/case-claim-xxx.png);"></span>
-            </div>
-        </div> 
-        <div class="container section1 flex">
-            <div class="col1 col">
-                <span class="img" style="background-image: url(/assets/img/case-claim-flow.png);"></span>
-            </div>
-            <div class="col2 col">
-                <h4>Structure</h4>
-                <p>Careful consideration of the user flow led to improvements in how users interacted with the claim process. Decision points were simplified by:</p>
+                <h4>Discovery Phase</h4>
+                <p>Careful analysis of the user flow led to key enhancements in how users navigated the claims process. Decision points were simplified by:</p>
                 <ul>
-                    <li>Converting specific user choices into system-driven behaviors.</li>
-                    <li>Splitting complex decisions into separate, manageable flows.</li>
-                    <li>Applying clear hierarchy to options presented on-screen.</li>
+                    <li>Converting manual selections into system-driven actions</li>
+                    <li>Breaking down complex decisions into shorter, manageable flows</li>
+                    <li>- Using visual hierarchy to guide user choices.</li>
                 </ul>
-                <p>These refinements reduced cognitive load and helped guide users more intuitively through tasks. Additionally, gaps in functionality were identified and addressed, ensuring the flow reduced post task confirmation points.</p>
+                <p>These refinements reduced cognitive load and made the experience more intuitive. We also identified and filled functionality gaps—like repair scheduling—to minimize friction after task completion.</p>
             </div>
         </div>  
         <div class="headline heading narrow container">
@@ -128,19 +120,53 @@
                     <p>Quick and direct flow for majority of users with additional scope for date, time entry</p>
                 </div>
                 <div class="col">
-                    <h3>Device Issue refinement</h3>
+                    <h3>Improving Problem Identification </h3>
                     <p>Increased selection options which allowed better system recognition and limited further questioning</p>
                 </div>
                 <div class="col">
-                    <h3>Replace &amp; Upgrade prioritisation</h3>
+                    <h3>Replacement with upgrade integration</h3>
                     <p>Prioritised replacement and upgrade options with visual aids to engage the users decision process.</p>
                 </div>
             </div>
         </div> 
+        <div class="heading container">
+            <span class="img" style="background-image: url(/assets/img/case-claim-outcome.png);"></span>
+        </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Wireframing</h4>
-                <p>Blah Blah Blah - blank slate, mobile first, MVP. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <span class="img"></span>
+            </div>
+            <div class="col2 col">
+                <h4>Design Decisions</h4>
+                <p>There was some initial fatigue after the first release of the service and I was aware that design debt had crept into the product with some of that being a result of following a web first design approach.  Using the period of rest I decided to lead my design improvements from a mobile first perspective which with some soft skill negotiating could allow design to lead product improvements from a UX standpoint.</p>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Improving Problem Identification </h4>
+                <p>Initial input relied on outdated desktop date selectors and free-text problem entry. Failure in system recognition triggered up to three follow-up screens, increasing user  friction and cognitive load.<br />
+                My solution was to collapse the multi-step process into a clean, mobile-optimized selection tree while retaining the existing text entry option. By improving input precision, the system could better recognize user issues with fewer prompts, making the flow faster and more intuitive.</br />
+                I also proposed voice-to-text input to improve accessibility and ease of use, and modernized the date selector with quick options like “Today” and “Yesterday” for faster interaction.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img"></span>
+            </div>
+        </div>
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <span class="img"></span>
+            </div>
+            <div class="col2 col">
+                <h4>Simplifying Compensation Selection</h4>
+                <p>With three compensation options—Repair, Replace, and Reimburse—and separate criteria influencing each, the experience risked overwhelming users and creating complexity as new requirements emerged.<br />
+                Since repair was the most efficient and frequently used method, I proposed a system matrix based on device type and issue. This would enable the system to recommend the most suitable option while allowing repair and replacement to operate as independent flows.</p>
+            </div>   
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Stakeholder alignment with Product Upgrade</h4>
+                <p>Having previously partnered with senior management to develop upgrade feature concepts aimed at retention, I saw this task as an opportunity to quietly bring those ideas back into play.<br />
+                Despite device imagery being out of scope, I felt it was key to making the experience more visually compelling and emotionally engaging—especially in encouraging users to upgrade aging devices. The UI was influenced by Amazon’s “Try Before You Buy,” tailored to our service model.</p>
             </div>
             <div class="col2 col">
                 <span class="img"></span>
@@ -151,12 +177,13 @@
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Surface</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>Additional Usability Testing</h4>
+                <p>Over a few weeks of alignment I refined the ideas with my design manager and defined scope with a Product Manager. Senior management gave backing to pursue the ideas for future sprint release.<br />
+                Budget was given to test the new concepts blah blah.</p>
             </div>
-            <div class="col1 col">
-                <h4>Title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            <div class="col2 col">
+                <h4>Wrap up</h4>
+                <p>Text</p>
             </div>
         </div> 
         <div class="note">
