--- a/boselecta/pages/journal/design-inspection/index.html
+++ b/boselecta/pages/journal/design-inspection/index.html
@@ -48,8 +48,8 @@ FOOTER
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>What needed Fixing</h4>
-                <p>I understand the Front End coding phase well. Initially, you implement the layout to match the Figma designs, then refine and align it more closely after taking a step back. In a recent product release, I noticed some details were missed, which can happen. During UAT, these nuances often get overlooked. To ensure the product was ready for launch, I led a design inspection process, working closely with the development team to align the final implementation with the original design intent.</p>
+                <h4>From Design to Development</h4>
+                <p>While working on two of Asurion’s main customer-facing products, I led a series of design inspections to improve the handoff between design and development, and to catch issues the QA team often missed during UAT. These inspections involved hands-on checks of the final code, looking for elements that didn’t quite pass the eye test. This attention to detail helped reduce cosmetic bugs, raised the standard of implementation, and fostered mutual respect between design and engineering.</p>
                 <blockquote>
                     <p>"Design doesn't stop at handoff; it’s essential to see it through to implementation, ensuring the vision is realized in the final product."</p>
                 </blockquote>
@@ -58,34 +58,33 @@ FOOTER
                 <span class="img" style="background-image: url(/assets/img/journal-inspection1.jpg);"></span>
             </div>
         </div>
-        <div class="heading container">
-            <span class="img" style="background-image: url(/assets/img/journal-inspection2.jpg);"></span>
-        </div>
-        <div class="container section1 flex">
-            <div class="col1 col">
-                <h4>How I Approached It</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
-            </div>
-            <div class="col2 col">
-                <h4>From Design to Delivery</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
-            </div>
-        </div> 
         <!--div class="heading container">
-            <span class="img"></span>
+            <span class="img" style="background-image: url(/assets/img/journal-inspection2.jpg);"></span>
         </div-->
         <div class="container section1 flex">
             <div class="col1 col">
-                <span class="img" style="background-image: url(/assets/img/journal-inspection3.jpg);"></span>
+                <span class="img" style="background-image: url(/assets/img/journal-inspection1.jpg);"></span>
+            </div>
+            <div class="col2 col">
+                <h4>How I Approached It</h4>
+                <p>My main focus was to catch clear issues that could affect how customers perceive the product or disrupt smooth usability. The most common problems were spacing inconsistencies—either pushing elements too far down the page or compressing them across responsive breakpoints, falling short of the intended design.<br />
+                Incorrect color usage was another frequent issue, often distorting the visual hierarchy and undermining the user’s first impression.<br />  
+                While pixel-perfect design is achievable, it’s more productive to tackle that through shared alignment on design variables and templates with the development team.</p>
+            </div>
+        </div>
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Bridging the divide between teams</h4>
+                <p>There’s often some initial tension when design begins to overlap with development and QA territory. But by going the extra mile—providing detailed Jira tickets, redline corrections, and clearly communicating intent—you earn trust and respect. That foundation opens the door to better collaboration and shows that designers understand and respect the realities of development. This mutual understanding goes a long way, especially when advocating for specific design functionality down the line.</p>
             </div>
             <div class="col2 col">
                 <h4>More Than Just a Handoff</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <p>Design shouldn’t stop once the handoff is approved. Staying involved through implementation means continuing to advocate for the end user—while also building stronger relationships and allies across the organization.</p>
             </div>
         </div>  
-        <!--div class="heading narrow container">
+        <div class="heading narrow container">
             <span class="img"></span>
-        </div-->  
+        </div>  
         <div class="note">
             <small>
                 This case study is a snapshot — I’ve kept it focused to balance work, life, and clarity. <br class="dt-set" />
