--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -39,7 +39,7 @@ FOOTER
             Based in Tokyo<br class="dt-set" />
             With 20+ years hands on 👋 XP
         </h2>
-        <p>I specialize in bridging design and execution—bringing clarity to complexity through a thoughtful, introspective approach rooted in empathy, ensuring great ideas translate into real, impactful outcomes.</p>
+        <p>I specialize in bridging design and execution—bringing clarity to complexity through a thoughtful, systems-minded approach that combines empathy with efficiency, ensuring bold ideas translate into real, impactful outcomes.</p>
         <a href="pages/about/" class="button outline" title="About Me">More about me</a>
     </section>
 
