--- a/boselecta/pages/casestudy/research-improvement/index.html
+++ b/boselecta/pages/casestudy/research-improvement/index.html
@@ -25,7 +25,7 @@
     <!-- HEADER  -->
     <header>
         <div class="brand">
-            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
+            <h1>Peter Roperss <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
         <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
@@ -33,7 +33,7 @@
         <h2>
             Improving the Claims Experience :<br class="dt-set" /> Research backed UX
         </h2>
-        <p>Reducing user pain points with an optimised flows and prioritising a mobile first strategy.</p>
+        <p>Minimising user pain points through streamlined, optimised flows while placing a strong emphasis on a mobile-first strategy to enhance task completion &amp; user satisfaction.</p>
         <a class="button" style="display: none;"></a>
     </section>
     <section id="splash">
@@ -54,7 +54,7 @@
                 </blockquote-->
             </div>
             <div class="col2 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/case-1-claim.png);"></span>
             </div>
         </div>
         <div class="headline heading container">
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="heading container">
-            <span class="img" style="background-image: url(/assets/img/case-claim-outcome.png);"></span>
+            <span class="img" style="background-image: url(/assets/img/case-2-claim.png);"></span>
         </div>
 
         <div class="container section1 flex">
